--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="company-bar-container" class="hidden">
       <div id="company-bar"></div>
     </div>
-    
+
     <!-- Tela inicial com introdução ao jogo -->
     <div class="container" id="intro">
       <button id="toggle-theme" class="theme-toggle">🌙</button>
@@ -29,16 +29,12 @@
       <h2>Escolha seu Personagem</h2>
       <div class="personagem-grid">
         <div class="personagem-card">
-          <img src="img/engenheira.png" alt="Engenheira" class="personagem-img">
-          <p>Engenheira Industrial</p>
+          <img src="img/homem.png" alt="Engenheira" class="personagem-img">
+          <p>Homem</p>
         </div>
         <div class="personagem-card">
-          <img src="img/gestor.png" alt="Gestor" class="personagem-img">
-          <p>Gestor de Operações</p>
-        </div>
-        <div class="personagem-card">
-          <img src="img/consultor.png" alt="Consultor" class="personagem-img">
-          <p>Consultor Lean</p>
+          <img src="img/mulher.png" alt="Gestor" class="personagem-img">
+          <p>Mulher</p>
         </div>
       </div>
       <button id="btnConfirmarPersonagem">Confirmar</button>
